[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/PlayerKinematic.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/nodes/PlayerTrail.gd" type="Script" id=2]
[ext_resource path="res://scripts/nodes/Player.gd" type="Script" id=9]
[ext_resource path="res://scenes/Gui.tscn" type="PackedScene" id=10]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 0, 0.0392157, 0.643137, 0.913725, 1 )

[node name="Player" type="Node2D"]
script = ExtResource( 9 )

[node name="Gui" parent="." instance=ExtResource( 10 )]

[node name="Trail" type="Line2D" parent="."]
width = 40.0
default_color = Color( 0.0392157, 0.643137, 0.913725, 1 )
gradient = SubResource( 1 )
script = ExtResource( 2 )

[node name="Kinematic" parent="." instance=ExtResource( 1 )]

[connection signal="death" from="Kinematic" to="." method="_on_Kinematic_death"]
[connection signal="energy_consumed" from="Kinematic" to="." method="_on_Kinematic_energy_consumed"]
[connection signal="energy_found" from="Kinematic" to="." method="_on_Kinematic_energy_found"]
[connection signal="jumped" from="Kinematic" to="." method="_on_Kinematic_jumped"]
[connection signal="landed" from="Kinematic" to="." method="_on_Kinematic_landed"]
[connection signal="spawned" from="Kinematic" to="." method="_on_Kinematic_spawned"]
[connection signal="switch_attempt" from="Kinematic" to="." method="_on_Kinematic_switch_attempt"]
